test/spec_vectors/local_tee/fail/module_15.wat
(module (func $type-param-arg-empty-vs-num (param i32) (local.tee 0) (drop)))